--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,12 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.filters > span {
+  padding-bottom: 20px;
+}
+
+.products {
+  width: 30%;
+  margin: 10px;
+}
